# gog-magog

./: .gitignore  README.md
gog-api/: .env  Cargo.toml  Makefile.toml  TODO.md
gog-api/data/: sqlite3_schema.sql  users.db
gog-api/src/: args.rs  main.rs
gog-api/src/cache/: mod.rs
gog-api/src/entity/: comments.rs  login_data.rs  mod.rs  posts.rs  prelude.rs  user_data.rs  user_pfp.rs
gog-api/src/errors/: mod.rs
gog-api/src/migrator/: m00000000_000001_create_login_table.rs  m00000000_000002_create_user_data_table.rs  m00000000_000003_expand_user_data_table.rs  m00000000_000004_expand_user_data_table.rs  m00000000_000005_create_pfp_table.rs  m00000000_000006_create_posts_table.rs  m00000000_000007_create_comments_table.rs  mod.rs
gog-api/src/service/: comments.rs  helpers.rs  mod.rs  objects.rs  posts.rs  resources.rs
gog-api/src/session/: mod.rs
gog-commons/: Cargo.toml
gog-commons/src/: lib.rs  validation.rs
gog-front/: Cargo.toml  Trunk.toml  index.html
gog-front/css/: classes.scss
gog-front/src/: data.rs  errors.rs  loader.rs  main.rs  util.rs  webworks.rs
gog-front/src/comments/: mod.rs
gog-front/src/posts/: mod.rs
