[package]
name = "gog-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
sea-orm = { version = "^0.12.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "^0.12.0"
tokio = { version = "1.35", fetures = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "^0.4"
argon2 = "0.5.3"
anyhow = "1.0.79"
thiserror = "1.0.57"
actix-cors = "0.7.0"
clap = { version = "4.5.16", features = ["derive"] }
chrono = "0.4.38"
actix-web-validator = "6.0.0"
validator = {version = "0.18.1", features = ["derive"]}
infer = "0.16.0"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
